# manv

./: .gitignore  README.md  lang_syntax.mv  pyproject.toml
cports/raylib/: raylib.mvh
examples/: hello-world.mv  if-else.mv
manv/: cli.py  common.py  file_handler.py  parser.py  utils.py  variables.py
manv/models/: line_model.py
manv/src/ast/: base.py  nodes.py
manv/src/builtin/: functions.py  literals.py  types.py  variables.py
manv/src/codegen/: asm.py  codegen.py
manv/src/lexer/: lexer.py
manv/src/parser/: exceptions.py  lexer.py  parser.py  tokens.py
manv/src/semantics/: rule_checker.py  type_checker.py
nasm/: cpu-registers-role.md  keywords.md  nasm-syntax.md
nasm/example/: hello_world.asm
old/: parser.py
scripts/: compile_std.py  run_tests.py  run_tests.sh
std/: constants.mv  core.asm  io.asm  math.mv
stdlib/: core.asm  io.asm  math.mv
stdlib/io/: io.asm  io.mvh
test_fasm/: example.asm  fasm-nutshell.md  hello_world.asm
tests/: test_lexer.mv  test_lexer.py
tests/io/: test_print.asm  test_print.toml  test_print_invalid_text_error.asm  test_print_invalid_text_error.toml  test_print_invalid_text_length_error.asm  test_print_invalid_text_length_error.toml
tests/variables/: test_01_create_variable.mv  test_02_increase_variable_size.mv  test_03_decrease_variable_size.mv  test_03_increase_variable_size.mv
