[tool.poetry]
name = "manv"
version = "0.1.0"
description = "A structured language for making complex mathematical calculations"
authors = ["ramsy0dev <ramsy0dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
typer = "^0.15.2"
rich = "^14.0.0"

[tool.poetry.plugins."console_scripts"]
manv = "manv:cli.run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
